--- a/Style.css
+++ b/Style.css
@@ -12,6 +12,7 @@ body{
     background: #050801;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
+    background-color:#292929 !important;
 }
 a{
     position: relative;
