--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ body{
     background: #050801;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
-    background-color:#292929 !important;
+    background-color:#100F0F !important;
 }
 a{
     position: relative;
